Separate backend and frontend
Create react app for frontend and separate it from backend

--- a/DataCoin UI/dataUI.html
+++ b/DataCoin UI/dataUI.html
@@ -39,6 +39,7 @@ a {
 </head>
 <body>
     <center> <h1> Data Coin</h1> </center>
+    <script src="../app/index.js"></script>
     <form>
         <div class="container">
             <label>Username : </label>
@@ -46,8 +47,10 @@ a {
             <label>Password : </label>
             <input type="password" placeholder="Enter Password" name="password" required>
             <a href = "walletUI.html" class = "button">Login</a>
-
         </div>
     </form>
+    <button id="balance" onclick="getBalance()">updateBalance</button>
 </body>
 </html>
+
+module.exports.Block
