--- a/DataCoin UI/walletUI.html
+++ b/DataCoin UI/walletUI.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <script src="../app/index.js"></script>
   <head>
     <meta charset="utf-8">
     <title></title>
@@ -7,4 +8,5 @@
   <body>
     <center><h1>Wallet</h1></center>
   </body>
+  <h1 onload="getBalance"></h1>
 </html>
