Organized UI into folders
Exported Login and Register Screen into functions of React

--- a/frontend/DataCoin UI/LoginUI.html
+++ b/frontend/DataCoin UI/LoginUI.html
@@ -9,14 +9,14 @@ Body {
   background-color: #018037;
 }
 a {
-       background-color: #4CAF50;
+    background-color: #4CAF50;
        width: 100%;
         color: #04989E;
         padding: 5px;
         margin: 220px;
         border: none;
         cursor: pointer;
-         }
+}
  form {
         border: 3px solid #f1f1f1;
     }
@@ -38,7 +38,7 @@ a {
 </style>
 </head>
 <body>
-    <center> <h1> Data Coin</h1> </center>
+    <h1 style="text-align:center"> Data Coin</h1> </center>
     <form>
         <div class="container">
             <label>Username : </label>
